<resources>
    <string name="app_name">CVVSDRK-Clube de Voo a Vela - Aeroclube de Rio Claro</string>
    <string name="students">Alunos</string>
    <string name="id">Id</string>
    <string name="date">Data:</string>
    <string name="student">Aluno:</string>
    <string name="flightnumber">Voo:</string>
    <string name="level">Nível:</string>
    <string name="takeoff">Decolagem:</string>
    <string name="landing">Pouso:</string>
    <string name="time">Tempo:</string>
    <string name="glider">Planador:</string>
    <string name="inpl">INPL:</string>
    <string name="hb01">1.1-Trabalho de hangar</string>
    <string name="hb02">1.2-1Trabalho de pista</string>
    <string name="hb03">1.3-Inspeção pré-voo</string>
    <string name="hb04">1.4-Cheque de decolagem (*2,3)</string>
    <string name="hb05">1.5-Efeitos dos comandos</string>
    <string name="hb06">1.6-Limpeza de área</string>
    <string name="hb07">1.7-Curvas de pequena inclinação</string>
    <string name="hb08">2.1-Correção do barbate (*3,4)</string>
    <string name="hb09">2.2-Voo reto nivelado</string>
    <string name="hb10">2.3-Uso do compensador</string>
    <string name="hb11">2.4-Uso do freio aerodinâmico</string>
    <string name="hb12">3.1-Decolagem assistida (*4)</string>
    <string name="hb13">3.2-Curvas de média e grande inclinação:30º,45º,60º,75º (*4)</string>
    <string name="hb14">3.3-Coordenação do 1º tipo</string>
    <string name="hb15">3.4-Voo lento</string>
    <string name="hb16">3.5-Estol do 1º tipo</string>
    <string name="hb17">3.6-Aproximação (reta final)</string>
    <string name="hb18">3.7-Pouso assistido (*4)</string>
    <string name="hb19">4.1-Reboque assistido</string>
    <string name="hb20">4.2-Térmicas (centralização/consistência)</string>
    <string name="hb21">4.3-Coordenação do 2º tipo</string>
    <string name="hb22">4.4-Glissada</string>
    <string name="hb23">5.1-Decolagem completa</string>
    <string name="hb24">5.2-Reboque completo (*6)</string>
    <string name="hb25">5.3-Circutio de tráfego assistido</string>
    <string name="hb26">5.4-Pouso completo</string>
    <string name="hb27">6.1-Fonia</string>
    <string name="hb28">6.2-Estol do 2º tipo</string>
    <string name="hb29">6.3-Estol em curva</string>
    <string name="hb30">6.4Estol com freio</string>
    <string name="hb31">7.1-Estado de alerta (Emergência)</string>
    <string name="hb32">7.2-Voos sem instrumentos</string>
    <string name="hb33">8.1-Decisões e responsabilidades</string>
    <string name="hb34">8.2-Voo completo</string>
    <string name="hb35">8.3-Localização espacial/geográfica (referências)</string>
    <string name="nota1">(*) Permitido passar paa a série seguinte ou indicada com nota menor que três</string>
    <string name="nota2">Para voo solo, no final da oitava série, é necessário nota mínima 4 (quatro) em todos os itens</string>
    <string name="c0">Comentários:</string>
    <string name="c1">Corrida e decolagem:</string>
    <string name="c2">Reboque:</string>
    <string name="c3">Voo em geral/Voo térmico:</string>
    <string name="c4">Manobras</string>
    <string name="c5">Espera, circuito e pouso:</string>
    <string name="c6">Conhecimentos técnicos/Trabalhos em solo:</string>
    <string name="mnuEvaluationSheet">Nova Ficha de Avaliação de Voo</string>
    <string name="mnuInpl">Inpls</string>
    <string name="txt1">Habilidades a avaliar:</string>
    <string name="txt2">Dados do voo:</string>
    <string name="studentfrmid">id:</string>
    <string name="studentfrmcanac">CANAC:</string>
    <string name="studentfrmnome2">Nome:</string>
    <string name="studentlstcanac">CANAC</string>
    <string name="studentlstnome">Nome</string>
    <string name="studentbtncadastrar">Cadastrar</string>
    <string name="studentbtnbuscar">Buscar</string>
    <string name="studentbtnremover">Deletar</string>
    <string name="msgimport">Exportado:</string>
    <string name="txtid">id:</string>
    <string name="mnuabout">Sobre</string>
    <string name="inplfrmid">id:</string>
    <string name="inplfrmcanac">CANAC:</string>
    <string name="inplfrmnome2">Nome:</string>
    <string name="inpllstcanac">CANAC</string>
    <string name="inpllstnome">Nome</string>
    <string name="inplbtncadastrar">Cadastrar</string>
    <string name="inplbtnbuscar">Buscar</string>
    <string name="inplbtnremover">Deletar</string>
    <string name="abouttit">About</string>
    <string name="aboutmsg">Evaluation sheet (gliders) - Gliders club - SDRK (Rio Claro/SP-Brazil) \n Version 0.0 (under beta test) \n Distributed under MIT Licence \n Developed by lcavamurajr (2018-01)</string>
    <string-array name="spinnerGlider">
        <item>PPFJT</item>
        <item>PPOIO</item>
        <item>PTPFE</item>
        <item>PTPHM</item>
    </string-array>
    <string-array name="spinnerInpl">
        <item>285543</item>
        <item>XXXXXX</item>
    </string-array>
    <string-array name="spinnerFlightNumber">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>
        <item>32</item>
        <item>33</item>
        <item>34</item>
        <item>35</item>
        <item>36</item>
        <item>37</item>
        <item>38</item>
        <item>39</item>
        <item>40</item>
        <item>41</item>
        <item>42</item>
        <item>43</item>
        <item>44</item>
        <item>45</item>
        <item>46</item>
        <item>47</item>
        <item>48</item>
        <item>49</item>
        <item>50</item>
        <item>51</item>
        <item>52</item>
        <item>53</item>
        <item>54</item>
        <item>55</item>
        <item>56</item>
        <item>57</item>
        <item>58</item>
        <item>59</item>
        <item>60</item>
    </string-array>
    <string-array name="spinnerhabilityvalue">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>
    <string-array name="spinnerLevel">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
    </string-array>
</resources>