<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:layout_width="fill_parent"
    android:orientation="horizontal"
    android:id="@+id/rowLayout"
    android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView
        android:id="@+id/rowidFlight"
        android:layout_width="35dp"
        android:layout_height="50dp"
        android:layout_gravity="fill_horizontal"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="0dp"
        android:clickable="false"
        android:focusable="false"
        android:text="@string/id" />

    <TextView
        android:id="@+id/rowflightDate"
        android:layout_width="89dp"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:layout_gravity="fill_horizontal"
        android:layout_toEndOf="@+id/rowidFlight"
        android:layout_toRightOf="@+id/rowidFlight"
        android:clickable="false"
        android:focusable="false"
        android:text="@string/date" />

    <TextView
        android:id="@+id/rowstudent"
        android:layout_width="175dp"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:layout_gravity="fill_horizontal"
        android:layout_toEndOf="@+id/rowflightDate"
        android:layout_toLeftOf="@+id/rowflightNumber"
        android:layout_toRightOf="@+id/rowflightDate"
        android:layout_toStartOf="@+id/rowflightNumber"
        android:clickable="false"
        android:focusable="false"
        android:text="@string/student" />

    <TextView
        android:id="@+id/rowflightNumber"
        android:layout_width="40dp"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:layout_gravity="fill_horizontal"
        android:layout_marginEnd="7dp"
        android:layout_marginRight="7dp"
        android:layout_toLeftOf="@+id/rowflightLevel"
        android:layout_toStartOf="@+id/rowflightLevel"
        android:clickable="false"
        android:focusable="false"
        android:text="@string/flightnumber" />

    <TextView
        android:id="@+id/rowflightLevel"
        android:layout_width="40dp"
        android:layout_height="50dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_gravity="fill_horizontal"
        android:clickable="false"
        android:focusable="false"
        android:text="@string/level" />

</LinearLayout >